welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: type mismatch;
 found   : String
 required: Boolean
while(litMessage()) { 
                ^BDR2:20: error: value recule is not a member of Unit
	if(x=="V") { recule();recule();recule();recule()recule();}
                                                        ^BDR2:21: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x="U") {recule();recule();recule();recule();recule();recule();}
            ^